--- a/elegantpaper-cn.tex
+++ b/elegantpaper-cn.tex
@@ -259,19 +259,42 @@
 再通过选择2D Nav goal并单击导航目标到位置并沿其面对的方向拖动，（如图\ref{fig:goal}所示）
 为战车指定一个导航目标。释放安全遥控后，应该开始导航到它的目标。
 
-
-\subsection{测试进度安排}
-
-
 \section{测试结果}
-截止到 2019 年 10 月 17 日，ElegantPaper v0.08 版本发布，ElegantPaper 模板在 Github 上的收藏数（star）达到了 164。在此特别感谢 China\TeX{} 以及 \href{http://www.latexstudio.net/}{\LaTeX{} 工作室}对于本系列模板的大力宣传与推广。
-
-如果你喜欢我们的模板，你可以在 Github 上收藏（Star）我们的模板。
+\subsection{重量检测}
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=\textwidth]{star.png}
-  \caption{一键三连求赞}
+  \includegraphics[width=\textwidth]{m.jpg}
+  \caption{高分辨雷达质量测量}
+  \label{fig:m}
 \end{figure}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{m2.jpg}
+  \caption{环境感知雷达质量测量}
+  \label{fig:m2}
+\end{figure}
+通过对雷达与设备称重，如图\ref{fig:m}高分辨所示，高分辨雷达重量1.170kg，达到指标要求。
+如图\ref{fig:m2}所示，环境感知雷达重量0.1kg，达到指标要求。
+
+\subsection{尺寸检测}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{s1.png}
+  \caption{高分辨雷达尺寸测量}
+  \label{fig:s1}
+\end{figure}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{s2.png}
+  \caption{环境感知雷达尺寸测量}
+  \label{fig:s2}
+\end{figure}
+
+通过对雷达与设备尺寸测量，如图\ref{fig:s1}所示，高分辨雷达体积$20mm \times 285mm \times 143mm$，达到指标要求。
+如图\ref{fig:s2}所示，环境感知雷达体积$6mm \times 70mm \times 80mm$，达到指标要求。
+\subsection{功率检测}
+通过对环境感知雷达利用稳压限流模块驱动，如图所示，工作功率2.5W，达到指标要求。
+
 
 \section{测试总结}
 如果您非常喜爱我们的模板，你还可以选择捐赠以表达您对我们模板和我的支持！
